Adding  ew functionality with "If"

--- a/piedrapapeltijera.html
+++ b/piedrapapeltijera.html
@@ -9,6 +9,23 @@
             let pc = 2
             option = prompt("Elige: 1|Piedra  2|Papel  3|Tijera")
             //alert("Elejiste " + option)
+            //Muestra la opción que se escoge
+            if(option == 1)
+            {
+                alert("Elegiste piedra")
+            }
+            else if (option == 2)
+            {
+                alert("Elegiste papel")
+            }
+            else if (option == 3)
+            {
+                alert("Elegiste tijera")
+            }
+            else
+            {
+                alert("La opción no se encuentra")
+            } 
         </script>
     </head>
     <body>
