--- a/piedrapapeltijera.html
+++ b/piedrapapeltijera.html
@@ -9,58 +9,54 @@
             {
                 return Math.floor(Math.random()*(Max - Min + 1) + Min)
             }
+            //Elecciones
+            function choose(option)
+            {
+                let message = ""             
+                if(option == 1)
+                {
+                    message = "piedra"
+                }
+                else if (option == 2)
+                {
+                    message = "papel"
+                }
+                else if (option == 3)
+                {
+                    message = "tijera"
+                }
+                else
+                {
+                    message = "La opcion no se encuentra"
+                } 
 
-            let PlayerOption = 0
-            let PcOption = aleatorio(1,3)
+                return message
+            }
+
+            let playerOption = 0
+            let pcOption = aleatorio(1,3)
             let Min = 1
             let Max = 3
             
-            PlayerOption = prompt("Elige 1) Piedra  2) Papel  3) Tijera")
+            playerOption = prompt("Elige 1) Piedra  2) Papel  3) Tijera")
             
-            //Elecciones del jugador
-            if(PlayerOption == 1)
-            {
-                alert("Elegiste piedra")
-            }
-            else if (PlayerOption == 2)
-            {
-                alert("Elegiste papel")
-            }
-            else if (PlayerOption == 3)
-            {
-                alert("Elegiste tijera")
-            }
-            else
-            {
-                alert("La opción no se encuentra")
-            } 
-            //Elecciones del pc
-            if(PcOption == 1)
-            {
-                alert("Pc elige piedra")
-            }
-            else if (PcOption == 2)
-            {
-                alert("Pc elige papel")
-            }
-            else if (PcOption == 3)
-            {
-                alert("Pc elige tijera")
-            }
+            alert("Elegiste " + choose(playerOption))
+            alert("Pc elige " + choose(pcOption))
+
             //Starting of game
-            if(PcOption == PlayerOption)
+            if(pcOption == playerOption)
             {
                 alert("Empate")
             } 
-            else if (PlayerOption == 1 && PcOption == 3)
+            else if (playerOption == 1 && pcOption == 3)
             {
                 alert("Ganaste")
             }
-            else if (PlayerOption == 2 && PcOption == 1)
+            else if (playerOption == 2 && pcOption == 1)
             {
                 alert("Ganaste") 
             }
-            else if (PlayerOption == 3 && PcOption == 2)
+            else if (playerOption == 3 && pcOption == 2)
             {
                 alert("Ganaste") 
             }
